--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -26,6 +26,7 @@
         - else
           - if @type != "users" && !@scrapers_total_count.zero?
             .col-xs-12.col-md-3.list-filters
+              %h2.h5.text-muted Filter scrapers
               .btn-group
                 = link_to "Only scrapers with data", search_path(q: @q), class: "btn btn-default #{('active' unless @show == 'all')}"
                 = link_to "All scrapers", search_path(q: @q, show: "all"), class: "btn btn-default #{('active' if @show == 'all')}"
