--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -28,8 +28,16 @@
   }
 
   h2 {
-    margin: 0 0 $padding-large-vertical;
+    margin: 0;
     font-weight: normal;
+    overflow: hidden;
+    height: 0;
+
+    @media (min-width: $screen-md-min) {
+      margin: 0 0 $padding-large-vertical;
+      overflow: auto;
+      height: auto;
+    }
   }
 
   .btn-group {
