--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -43,12 +43,7 @@
               .col-xs-12
                 = paginate @scrapers
             - else
-              .col-xs-12.col-md-9
-                .alert.alert-info
-                  Sorry, we couldn’t find any scrapers
-                  %em with data,
-                  that are relevant to your search term
-                  %strong “#{@q}”.
+              = render partial: "no_results_of_type_notice"
           - else
             = render partial: "no_results_of_type_notice"
     - else
