--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -22,11 +22,7 @@
         - else
           - if !@unfiltered_scrapers_count.zero?
             %aside.col-xs-12.col-md-3
-              .list-filters
-                %h2.h5.text-muted Filter scrapers
-                .btn-group
-                  = link_to "With data", search_path(q: @q), class: "btn btn-default #{('active' unless @show == 'all')}"
-                  = link_to "All", search_path(q: @q, show: "all"), class: "btn btn-default #{('active' if @show == 'all')}"
+              = render partial: "scraper_search_filter_controls"
 
             - # If there are scrapers matching filters
             - if !@scrapers.total_count.zero?
