--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %meta(content='Get structured data out of the web. Code collaboration through GitHub. Run your scrapers in the cloud.' name='Description')
+    = display_meta_tags
     %title= content_for?(:title) ? "morph.io: #{yield(:title)}" : "morph.io"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
