Add meta description back to public home page

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -1,3 +1,5 @@
+- set_meta_tags description: 'Get structured data out of the web. Code collaboration through GitHub. Run your scrapers in the cloud.'
+
 .banner-wrapper
   .banner.container#banner
     %h2 Take the hassle out of web&nbsp;scraping
