--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -1,4 +1,5 @@
 - content_for :title, @scraper.full_name
+- set_meta_tags description: (!@scraper.description.blank? ? @scraper.description : 'A scraper to collect structured data from the web')
 
 .container
   = sync partial: "show_partial", resource: @scraper, refetch: true
