Use new method for the scraper description
This means that if the scraper has no description, but has some
listed scraped domains, it will include that in the description.

--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -1,5 +1,5 @@
 - content_for :title, @scraper.full_name
-- set_meta_tags description: (!@scraper.description.blank? ? @scraper.description : 'A scraper to collect structured data from the web')
+- set_meta_tags description: scraper_description(@scraper)
 
 .container
   = sync partial: "show_partial", resource: @scraper, refetch: true
