--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -1,3 +1,5 @@
+- set_meta_tags description: 'Get structured data out of the web. Code collaboration through GitHub. Run your scrapers in the cloud.'
+
 - if signed_in?
   = render "signed_in_index"
 - else
