Consistently pass to view list of scrapers

--- a/app/views/search/_no_results_of_type_notice.html.haml
+++ b/app/views/search/_no_results_of_type_notice.html.haml
@@ -5,7 +5,7 @@
       users
     - else
       scrapers
-      - if !@unfiltered_scrapers_count.zero? && @scrapers.total_count.zero?
+      - if !@all_scrapers.total_count.zero? && @scrapers.total_count.zero?
         %em with data,
         that are
     relevant to your search term
