--- a/app/views/search/_search_type_nav.html.haml
+++ b/app/views/search/_search_type_nav.html.haml
@@ -2,7 +2,7 @@
   %li{class: ('active' unless @type == "users"), role: "presentation"}
     = link_to search_path(q: @q, show: @show, type: nil) do
       Scrapers
-      %span.badge #{@unfiltered_scrapers_count}
+      %span.badge #{@all_scrapers.total_count}
   %li{class: ('active' if @type == "users"), role: "presentation"}
     = link_to search_path(q: @q, show: @show, type: "users") do
       Users
