--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -294,11 +294,15 @@ a i.fa-clock-o {
   }
 
   .icon-box {
-    margin: 0 .25em;
+    margin: .1em .25em 0 .25em;
     text-align: center;
 
     @media (min-width: 37em) {
       width: 3em;
+    }
+
+    @media (min-width: 40em) {
+      margin-top: .25em;
     }
 
     .spinner,
