Align 'errored' label to be centred to text height

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -324,7 +324,12 @@ a i.fa-clock-o {
   }
 
   .label-danger.pull-right {
+    margin-top: .2em;
     margin-left: 0.25em;
+
+    @media (min-width: 40em) {
+      margin-top: .5em;
+    }
   }
 }
 
