Use simpler short-hand margin property (refactor only)

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -324,8 +324,7 @@ a i.fa-clock-o {
   }
 
   .label-danger.pull-right {
-    margin-top: .2em;
-    margin-left: 0.25em;
+    margin: .2em 0 0 .25em;
 
     @media (min-width: 40em) {
       margin-top: .5em;
