--- a/app/views/search/_no_results_of_type_notice.html.haml
+++ b/app/views/search/_no_results_of_type_notice.html.haml
@@ -1,12 +1,9 @@
 .col-xs-12.col-md-9
   .alert.alert-info
-    Sorry, we couldn’t find any
     - if @type == "users"
-      users
+      = no_search_results_message("users", @q)
     - else
-      scrapers
       - if !@all_scrapers.total_count.zero? && @scrapers.total_count.zero?
-        %em with data,
-        that are
-    relevant to your search term
-    %strong “#{@q}”.
+        = no_search_results_message("scrapers <em>with data,</em> that are".html_safe, @q)
+      - else
+        = no_search_results_message("scrapers", @q)
