--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -19,7 +19,9 @@
 
         - if @type == "users"
           - if @owners.total_count.zero?
-            = render partial: "no_results_of_type_notice"
+            .col-xs-12.col-md-9
+              .alert.alert-info
+                = no_search_results_message("users", @q)
           - else
             .col-xs-12
               = render partial: "search_results_list", locals: {results: @owners}
@@ -29,7 +31,12 @@
               = render partial: "scraper_search_filter_controls"
 
           - if @scrapers.total_count.zero?
-            = render partial: "no_results_of_type_notice"
+            .col-xs-12.col-md-9
+              .alert.alert-info
+                - if !@all_scrapers.total_count.zero?
+                  = no_search_results_message("scrapers <em>with data,</em> that are".html_safe, @q)
+                - else
+                  = no_search_results_message("scrapers", @q)
           - else
             .col-xs-12.col-md-9
               = render partial: "search_results_list", locals: {results: @scrapers}
