--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -18,22 +18,6 @@
           = render partial: "search_type_nav"
 
         - if @type == "users"
-          .col-xs-12
-            - if @owners.total_count.zero?
-              .alert.alert-info= no_search_results_message("users", @q)
-            - else
-              = render partial: "search_results_list", locals: {results: @owners}
+          = render "results_owners"
         - else
-          - if !@all_scrapers.total_count.zero?
-            %aside.col-xs-12.col-md-3
-              = render partial: "scraper_search_filter_controls"
-
-          .col-xs-12.col-md-9
-            - if @scrapers.total_count.zero?
-              .alert.alert-info
-                - if !@all_scrapers.total_count.zero?
-                  = no_search_results_message("scrapers <em>with data,</em> that are".html_safe, @q)
-                - else
-                  = no_search_results_message("scrapers", @q)
-            - else
-              = render partial: "search_results_list", locals: {results: @scrapers}
+          = render "results_scrapers"
