--- a/app/views/search/_results_scrapers.html.haml
+++ b/app/views/search/_results_scrapers.html.haml
@@ -1,15 +1,16 @@
-- if !@all_scrapers.total_count.zero?
+- if @all_scrapers.total_count.zero?
+  .col-xs-12.col-md-9
+    .alert.alert-info
+      = no_search_results_message("scrapers", @q)
+- else
   %aside.col-xs-12.col-md-3
     = render partial: "scraper_search_filter_controls"
 
-.col-xs-12.col-md-9
-  - if @scrapers.total_count.zero?
-    .alert.alert-info
-      - if !@all_scrapers.total_count.zero?
+  .col-xs-12.col-md-9
+    - if @scrapers.total_count.zero?
+      .alert.alert-info
         = no_search_results_message("scrapers <em>with data,</em> that are".html_safe, @q)
-      - else
-        = no_search_results_message("scrapers", @q)
-  - else
-    - @scrapers.with_details.each do |scraper, details|
-      = render scraper, highlight: details[:highlight]
-    = paginate @scrapers
+    - else
+      - @scrapers.with_details.each do |scraper, details|
+        = render scraper, highlight: details[:highlight]
+      = paginate @scrapers
