Add vanity metrics banner to bottom of landing pages (static prototype)
Demonstrate the scale of activity on morph.io to validate and
reenforce that morph is awesome and they should give it a
go or explore it.

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -4,3 +4,16 @@
   = render "signed_in_index"
 - else
   = render "signed_out_index"
+
+.banner.banner-metrics
+  .container
+    %h3 This week
+    .metric-box.col-sm-4
+      %strong 22,000
+      web pages scraped
+    .metric-box.col-sm-4
+      %strong 750,000
+      rows of data collected
+    .metric-box.col-sm-4
+      %strong 5,000
+      downloads &amp; API queries
