--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -258,3 +258,22 @@
     }
   }
 }
+
+.banner-metrics {
+  padding-bottom: 48px;
+  text-align: center;
+
+  h3 {
+    margin-bottom: 24px;
+  }
+}
+
+.metric-box {
+  margin-bottom: 24px;
+  font-size: $font-size-h4;
+
+  strong {
+    display: block;
+    font-size: $font-size-h1;
+  }
+}
