--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -7,7 +7,7 @@
 
 .banner.banner-metrics
   .container
-    %h3 This week
+    %h3 This week at morph.io
     .metric-box.col-sm-4
       %strong= number_with_delimiter(Morph::VanityStats.total_pages_scraped_in_last_week)
       web pages scraped
