Very first, very rough pass at adding count of results to filter on search page

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -52,6 +52,10 @@
     @media (min-width: $screen-md-min) {
       display: inline-block;
     }
+
+    .badge {
+      background-color: $gray-light;
+    }
   }
 
   a {
