Make the text slightly wider so text doesn't need to wrap

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -196,6 +196,10 @@
     padding: 0;
   }
 
+  .col-lg-8 {
+    @include make-lg-column(8.25);
+  }
+
   p a {
     color: #1E241D;
     border-bottom: 2px darken($offset-color, 20%) solid;
