Add the query to the description

--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -1,4 +1,4 @@
-- set_meta_tags description: 'Search morph.io for scrapers and users'
+- set_meta_tags description: "Search morph.io for scrapers and users #{"relating to ‘" + @q + "’" if @q}"
 
 .container
   %h1.label-heading
