--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -1,3 +1,4 @@
+- content_for :title, "Search"
 - set_meta_tags description: "Search morph.io scrapers and users#{" for ‘" + @q + "’" if @q}"
 
 .container
