Give the new users list a whole grid row of it's own

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -15,7 +15,7 @@
   = render "broken_scrapers"
 
   .row
-    .col-md-6
+    .col-xs-12
       %h2 Recent New Users
       %p
         = link_to users_path do
