--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -20,11 +20,8 @@
       %ul.list-unstyled
         - User.all.order(created_at: :desc).limit(10).each do |user|
           %li
-            = owner_image(user, 20)
-            = link_to user.nickname, user
-            - if user.name
-              &mdash;
-              = user.name
+            = link_to user do
+              = owner_image(user, 20)
       %p
         = link_to users_path do
           See more of the #{pluralize(User.count, "user")}&hellip;
