--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -21,9 +21,7 @@
         Welcome to morph.io
       %ul.list-unstyled.list-inline
         - User.all.order(created_at: :desc).limit(8).each do |user|
-          %li
-            = link_to user do
-              = owner_image(user, 60)
+          %li= link_to owner_image(user, 60), user
       %p
         = link_to users_path do
           See more of the #{pluralize(User.count, "user")}&hellip;
