--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -22,9 +22,7 @@
       %ul.list-unstyled.list-inline
         - User.all.order(created_at: :desc).limit(8).each do |user|
           %li= link_to owner_image(user, 60), user
-      %p
-        = link_to users_path do
-          See more of the #{pluralize(User.count, "user")}&hellip;
+      %p= link_to "See more of the #{pluralize(User.count, "user")}…", users_path
     .col-md-6
       %h2 Recently Active Scrapers
       %p
