--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -20,6 +20,7 @@
         %small.pre-heading Recent new users
         Welcome to morph.io
       %ul.list-unstyled.list-inline
+        - # TODO Don't show users who have a 'default' Github identicon avartar
         - User.all.order(created_at: :desc).limit(8).each do |user|
           %li= link_to owner_image(user, 60), user
       %p= link_to "See more of the #{pluralize(User.count, "user")}…", users_path
