Add vertical space between avatars
This stops them bumping into each other on small screens, when
they wrap around.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -41,3 +41,9 @@
     font-size: $font-size-large;
   }
 }
+
+.owner-list-simple {
+  .owner-item {
+    margin-bottom: $padding-large-vertical;
+  }
+}
