Simplify route to list of running scrapers

--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -31,7 +31,7 @@
               %li= link_to "Dashboard", admin_dashboard_path
               %li= link_to "Owner Metrics", admin_owners_path
               %li= link_to "Background queue", "/admin/jobs", data: {"no-turbolink" => true}
-              %li= link_to "Running scrapers", scrapers_running_path
+              %li= link_to "Running scrapers", running_scrapers_path
 
       %ul.nav.navbar-nav.navbar-right
         %li
