Extract into controller

--- a/app/views/scrapers/running.html.haml
+++ b/app/views/scrapers/running.html.haml
@@ -2,4 +2,4 @@
   .row
     .col-xs-12
       %h1 Scrapers currently running
-      .list-group= sync partial: "scraper", collection: Scraper.currently_running
+      .list-group= sync partial: "scraper", collection: @scrapers
