--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -8,18 +8,19 @@
     .row
       - if current_user.all_owners.count == 1
         = f.input :owner_id, as: "hidden", input_html: { value: current_user.id }
-        .col-sm-6
-          = f.input :name, placeholder: "city_of_sydney_development_applications", hint: "Name to give scraper here and on Github"
       - else
         .col-sm-2
           = f.input :owner_id, collection: current_user.all_owners.map{|o| [o.nickname, o.id, {"data-content" => "#{owner_image(o, 20, false)} #{o.nickname}"}]}, include_blank: false
-        .col-sm-6
-          -# Using long-winded form here because simple_form doesn't directly support prepends
-          = f.input :name do
+      .col-sm-6
+        = f.input :name do
+          - if current_user.all_owners.count == 1
+            = f.input_field :name, class: "form-control", placeholder:"city_of_sydney_development_applications"
+          - else
+            -# Using long-winded form here because simple_form doesn't directly support prepends
             .input-group
               %span.input-group-addon /
               = f.input_field :name, class: "form-control", placeholder:"city_of_sydney_development_applications"
-            %span.help-block Name to give the scraper here and on GitHub
+          %span.help-block Name to give the scraper here and on GitHub
 
     .row
       .col-sm-10.col-md-8
