--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -20,7 +20,6 @@
         %small.pre-heading Recent new users
         Welcome to morph.io
       %ul.owner-list-simple.list-unstyled.list-inline
-        - # TODO Don't show users who have a 'default' Github identicon avartar
-        - User.all.order(created_at: :desc).limit(8).each do |user|
+        - User.where.not(name: nil).order(created_at: :desc).limit(8).each do |user|
           %li.owner-item= link_to owner_image(user, 60), user
       %p= link_to "See more of the #{pluralize(User.count, "user")}…", users_path
