Add class for styling new users block

--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -15,7 +15,7 @@
   = render "broken_scrapers"
 
   .row
-    .col-xs-12
+    .new-users-block.col-xs-12
       %h2
         %small.pre-heading Recent new users
         Welcome to morph.io
