--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -42,7 +42,7 @@
 .banner.banner-quotes#quotes
   .container
     .row
-      .col-md-6
+      .col-md-4
         %blockquote
           %p Scrapers are kept in public github repos and then we consume the data from an API, delicious! Is like scrapers with steroids!
           %footer
@@ -54,7 +54,7 @@
                 %span.p-org Fundación Ciudadano Inteligente
                 %span.p-country-name Chile
 
-      .col-md-6
+      .col-md-4
         %blockquote
           %p I love morph.io because it gives you everything you need to run a scraper. I've written a system which notifies me when Australian FOI disclosure logs are updated.
           %footer
@@ -64,4 +64,16 @@
               .media-body
                 %span.p-name Will Ockenden
                 %span.p-org Australian Broadcasting Corporation
+                %span.p-country-name Australia
+
+      .col-md-4
+        %blockquote
+          %p If you’re a paid or citizen journo or student journo & you don’t know about this, it’s time to get acquainted with morph.io
+          %footer
+            = link_to "https://twitter.com/Wendy_Bacon", class: 'h-card media' do
+              .pull-left
+                = image_tag "wendybacon_avatar.jpg", class: "img-circle media-object"
+              .media-body
+                %span.p-name Professor Wendy Bacon
+                %span.p-org Journalist, Activist
                 %span.p-country-name Australia
