--- a/app/views/runs/_history.html.haml
+++ b/app/views/runs/_history.html.haml
@@ -1,5 +1,5 @@
-- cache ["v5", run] do
-  %li.list-group-item{class: run.finished_successfully? ? "alert-success" : "alert-danger"}
+- cache ['v5', run] do
+  %li.list-group-item{ class: run.finished_successfully? ? 'alert-success' : 'alert-danger' }
     - if run.auto?
       Auto
     - else
@@ -18,10 +18,10 @@
     .pull-right.hidden-xs
       %div
         run time
-        = "%.1f s" % run.wall_time
+        = format('%.1f s', run.wall_time)
       %div
     %div= database_changes_in_words(run)
     %div
       - if run.connection_logs.size > 0
-        = pluralize(run.connection_logs.size, "page")
+        = pluralize(run.connection_logs.size, 'page')
         scraped
