--- a/app/views/runs/_history.html.haml
+++ b/app/views/runs/_history.html.haml
@@ -1,4 +1,4 @@
-- cache ['v5', run] do
+- cache ['v6', run] do
   %li.list-group-item{ class: run.finished_successfully? ? 'alert-success' : 'alert-danger' }
     - if run.auto?
       Auto
@@ -18,7 +18,10 @@
     .pull-right.hidden-xs
       %div
         run time
-        = format('%.1f s', run.wall_time)
+        - if run.wall_time < 60
+          = format('%.f s', run.wall_time)
+        - else
+          = distance_of_time_in_words(run.wall_time)
       %div
     %div= database_changes_in_words(run)
     %div
