--- a/app/views/application/_google_analytics.html.haml
+++ b/app/views/application/_google_analytics.html.haml
@@ -1,4 +1,4 @@
-- if ENV['GOOGLE_ANALYTICS_TRACKING_ID']
+- if ENV['GOOGLE_ANALYTICS_TRACKING_ID'] && !ENV['GOOGLE_ANALYTICS_TRACKING_ID'].blank?
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
