Move styles to their own file

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -1,66 +1,7 @@
-:css
-  body {
-    padding-top: 40px;
-    background-color: #f5f5f5;
-  }
-  .flat .plan {
-    border-radius: 6px;
-    list-style: none;
-    padding: 0 0 20px;
-    margin: 0 0 15px;
-    background: #fff;
-    text-align: center;
-  }
-  .flat .plan li {
-    padding: 10px 15px;
-    color: #ccc;
-    border-top: 1px solid #f5f5f5;
-    -webkit-transition: 300ms;
-    transition: 300ms;
-  }
-  .flat .plan li.plan-price {
-    border-top: 0;
-  }
-  .flat .plan li.plan-name {
-    border-radius: 6px 6px 0 0;
-    padding: 15px;
-    font-size: 24px;
-    line-height: 24px;
-    color: #fff;
-    background: #e74c3c;
-    margin-bottom: 30px;
-    border-top: 0;
-  }
-  .flat .plan li > strong {
-    color: #e74c3c;
-  }
-  .flat .plan li.plan-action {
-    margin-top: 10px;
-    border-top: 0;
-  }
-  .flat .plan.featured {
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.1);
-  }
-  .flat .plan.featured li.plan-name {
-    background: #000;
-  }
-  .flat .plan.featured:hover li.plan-name {
-    background: #c0392b;
-  }
-  .flat .plan:hover li.plan-name {
-    background: #000;
-  }
-  #footer {
-    margin-top: 100px;
-    padding-bottom: 30px;
-  }
-
 .container
   %h1.page-header Pricing Table
   %p &#160;
-  .row.flat
+  .row.pricing
     .col-lg-3.col-md-3.col-xs-6
       %ul.plan.plan1
         %li.plan-name
