Switch a few colours around

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -25,7 +25,8 @@
           %strong Forum
           Support
         %li.plan-action
-          %a.btn.btn-danger.btn-lg{:href => "#"} Signup
+          %a.btn.btn-default.btn-lg{:href => "#"} Signup
+
     .col-lg-3.col-md-3.col-xs-6
       %ul.plan.plan2.featured
         %li.plan-name
@@ -49,7 +50,8 @@
           %strong Forum
           Support
         %li.plan-action
-          %a.btn.btn-danger.btn-lg{:href => "#"} Signup
+          %a.btn.btn-default.btn-lg{:href => "#"} Signup
+
     .col-lg-3.col-md-3.col-xs-6
       %ul.plan.plan3
         %li.plan-name
@@ -73,7 +75,8 @@
           %strong Forum
           Support
         %li.plan-action
-          %a.btn.btn-danger.btn-lg{:href => "#"} Signup
+          %a.btn.btn-default.btn-lg{:href => "#"} Signup
+
     .col-lg-3.col-md-3.col-xs-6
       %ul.plan.plan4
         %li.plan-name
@@ -97,4 +100,4 @@
           %strong Forum
           Support
         %li.plan-action
-          %a.btn.btn-danger.btn-lg{:href => "#"} Signup
+          %a.btn.btn-default.btn-lg{:href => "#"} Signup
