--- a/app/assets/stylesheets/supporters.css.scss
+++ b/app/assets/stylesheets/supporters.css.scss
@@ -4,6 +4,7 @@
 
 .pricing {
   .plan {
+    border-radius: 6px;
     list-style: none;
     padding: 0 0 20px;
     margin: 0 0 15px;
@@ -25,7 +26,7 @@
       font-size: 24px;
       line-height: 24px;
       color: #fff;
-      background: #e74c3c;
+      background: $offset-color;
       margin-bottom: 30px;
       border-top: 0;
     }
