--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -25,8 +25,12 @@
           %strong Forum
           Support
         %li.plan-action
-          %a.btn.btn-default.btn-lg{:href => "#"} Signup
-
+          = form_tag supporters_path do
+            %script{src: "https://checkout.stripe.com/checkout.js", class: "stripe-button",
+                    data: {key: Rails.configuration.stripe[:publishable_key],
+                           description: "Basic supporter",
+                           amount: "2900",
+                           email: current_user.email}}
     .col-lg-3.col-md-3.col-xs-6
       %ul.plan.plan2.featured
         %li.plan-name
