Make the content a bit more specific to our situation

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -1,5 +1,5 @@
 .container
-  %h1.page-header Pricing Table
+  %h1.page-header Become a supporter
   %p &#160;
   .row.pricing.row-centered
     .col-xs-3.col-centered
@@ -7,23 +7,17 @@
         %li.plan-name
           Basic
         %li.plan-price
-          %strong $29
+          %strong $14
           \/ month
         %li
-          %strong 5GB
-          Storage
-        %li
-          %strong 1GB
-          RAM
-        %li
-          %strong 400GB
-          Bandwidth
-        %li
-          %strong 10
-          Email Address
+          %strong Feel
+          the warm and fuzzies
         %li
           %strong Forum
           Support
+        %li
+          %strong 1GB
+          RAM
         %li.plan-action
           = form_tag supporters_path do
             = hidden_field_tag :price, 2900
@@ -38,23 +32,17 @@
         %li.plan-name
           Standard
         %li.plan-price
-          %strong $39
+          %strong $24
           \/ month
         %li
-          %strong 5GB
-          Storage
-        %li
-          %strong 1GB
-          RAM
-        %li
-          %strong 400GB
-          Bandwidth
-        %li
-          %strong 10
-          Email Address
+          %strong Feel
+          the warm and fuzzies
         %li
           %strong Forum
           Support
+        %li
+          %strong 1GB
+          RAM
         %li.plan-action
           %a.btn.btn-default.btn-lg{:href => "#"} Signup
 
@@ -63,22 +51,16 @@
         %li.plan-name
           Advanced
         %li.plan-price
-          %strong $199
+          %strong $149
           \/ month
         %li
-          %strong 50GB
-          Storage
-        %li
-          %strong 8GB
-          RAM
-        %li
-          %strong 1024GB
-          Bandwidth
-        %li
-          %strong Unlimited
-          Email Address
+          %strong Feel
+          the warm and fuzzies
         %li
           %strong Forum
           Support
+        %li
+          %strong Priority
+          technical support
         %li.plan-action
           %a.btn.btn-default.btn-lg{:href => "#"} Signup
