Some more fluffy words about the purpose of each level

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -9,6 +9,8 @@
         %li.plan-price
           %strong $14
           \/ month
+        %li.plan-reason
+          Supporters keep morph.io open and running and available to all
         %li
           %strong Feel
           the warm and fuzzies
@@ -34,6 +36,8 @@
         %li.plan-price
           %strong $24
           \/ month
+        %li.plan-reason
+          Support continued development of the open-source software that powers morph.io
         %li
           %strong Feel
           the warm and fuzzies
@@ -53,6 +57,9 @@
         %li.plan-price
           %strong $149
           \/ month
+        %li.plan-reason
+          Rely on morph.io for your business or not-for-profit? Priority technical support
+          to get you answers and fixes quickly
         %li
           %strong Feel
           the warm and fuzzies
